--- a/src/Styles/App.scss
+++ b/src/Styles/App.scss
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
+@import 'Properties';
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;600&family=Noto+Sans:wght@100;300;400&display=swap');
+
+@mixin main_font{
+  font-family: 'Montserrat', sans-serif;
+}
+@mixin second_font{
+  font-family: 'Noto Sans', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body,
+html {
+  margin: 0;
+  padding: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+
+
+body {
+  @include second_font();
+  background: $black;
+  color: $white;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  align-items: center;
 
-.App-link {
-  color: #61dafb;
-}
+  text-align: center;
+  min-width: fit-content;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
